--- a/index.html
+++ b/index.html
@@ -1,63 +1,550 @@
-
 <html lang="en">
-   <head>
-      <meta charset="utf-8" />
-      <meta name="viewport" content="width=device-width,initial-scale=1" />
-      <title>My Profile</title>
-      <style>
-         body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial;margin:0;padding:0;background:#f7f7f9;color:#222}
-         .container{max-width:900px;margin:3rem auto;padding:1.5rem;background:#fff;border-radius:12px;box-shadow:0 6px 20px rgba(20,20,40,0.06)}
-         header{display:flex;gap:1rem;align-items:center}
-         img.avatar{width:96px;height:96px;border-radius:12px;object-fit:cover}
-         h1{margin:.2rem 0}
-         .skills{display:flex;flex-wrap:wrap;gap:.5rem;margin-top:.5rem}
-         .skill{background:#eef2ff;padding:.35rem .6rem;border-radius:999px;font-size:.9rem}
-         section{margin-top:1.25rem}
-         .links a{text-decoration:none;color:inherit;margin-right:1rem}
-         footer{margin-top:2rem;font-size:.85rem;color:#666}
-      </style>
-   </head>
-   <body>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <title>My Profile · Diwa Prasetyo</title>
+    <style>
+      :root{
+        --bg: #f3f4f6;
+        --bg-alt:#ffffff;
+        --fg:#111827;
+        --muted:#6b7280;
+        --accent:#4f46e5;
+        --accent-soft:#eef2ff;
+        --border:#e5e7eb;
+        --shadow:0 8px 30px rgba(15,23,42,0.12);
+      }
+      body[data-theme="dark"]{
+        --bg:#020617;
+        --bg-alt:#020617;
+        --fg:#e5e7eb;
+        --muted:#9ca3af;
+        --accent:#6366f1;
+        --accent-soft:rgba(99,102,241,0.08);
+        --border:rgba(148,163,184,0.4);
+        --shadow:0 14px 40px rgba(15,23,42,0.85);
+      }
+
+      html{scroll-behavior:smooth;}
+      body{
+        font-family:system-ui,-apple-system,Segoe UI,Roboto,"Helvetica Neue",Arial;
+        margin:0;
+        padding:0;
+        background:
+          radial-gradient(circle at top left, rgba(129,140,248,.22), transparent 55%),
+          radial-gradient(circle at bottom right, rgba(45,212,191,.18), transparent 55%),
+          var(--bg);
+        color:var(--fg);
+        min-height:100vh;
+        display:flex;
+        align-items:center;
+        justify-content:center;
+      }
+      .page-frame{
+        padding:1.5rem;
+        width:100%;
+      }
+      .container{
+        max-width:900px;
+        margin:0 auto;
+        padding:1.75rem 1.8rem 1.6rem;
+        background:radial-gradient(circle at top left, rgba(255,255,255,0.95), rgba(248,250,252,0.96));
+        border-radius:18px;
+        box-shadow:var(--shadow);
+        border:1px solid rgba(148,163,184,0.2);
+        backdrop-filter:blur(12px);
+        position:relative;
+        overflow:hidden;
+      }
+      body[data-theme="dark"] .container{
+        background:radial-gradient(circle at top left, rgba(15,23,42,0.98), rgba(15,23,42,0.96));
+      }
+
+      .container::before{
+        content:"";
+        position:absolute;
+        inset:0;
+        border-radius:inherit;
+        padding:1px;
+        background:linear-gradient(135deg,rgba(96,165,250,0.8),rgba(129,140,248,0.8),rgba(45,212,191,0.9));
+        -webkit-mask:
+          linear-gradient(#000 0 0) content-box,
+          linear-gradient(#000 0 0);
+        -webkit-mask-composite:xor;
+        mask-composite:exclude;
+        opacity:0.35;
+        pointer-events:none;
+      }
+
+      header{
+        display:flex;
+        gap:1.25rem;
+        align-items:center;
+        position:relative;
+      }
+      .avatar-wrap{
+        position:relative;
+        width:96px;
+        height:96px;
+        flex-shrink:0;
+      }
+      img.avatar{
+        width:100%;
+        height:100%;
+        border-radius:20px;
+        object-fit:cover;
+        display:block;
+        position:relative;
+        z-index:1;
+        box-shadow:0 10px 25px rgba(15,23,42,0.35);
+        transform:translateY(0);
+        transition:transform .3s ease, box-shadow .3s ease;
+      }
+      .avatar-ring{
+        position:absolute;
+        inset:-3px;
+        border-radius:24px;
+        background:conic-gradient(from 180deg, #4f46e5,#22c55e,#0ea5e9,#4f46e5);
+        opacity:.9;
+        filter:blur(.5px);
+        animation:spin 14s linear infinite;
+      }
+      .avatar-glow{
+        position:absolute;
+        inset:auto -15px -18px;
+        height:26px;
+        background:radial-gradient(circle at center, rgba(15,23,42,0.6), transparent 65%);
+        opacity:.85;
+      }
+      .avatar-wrap:hover .avatar{
+        transform:translateY(-4px) scale(1.02);
+        box-shadow:0 18px 40px rgba(15,23,42,0.5);
+      }
+
+      @keyframes spin{
+        to{transform:rotate(360deg);}
+      }
+
+      h1{
+        margin:.15rem 0 .1rem;
+        font-size:1.65rem;
+        letter-spacing:.02em;
+      }
+      .role{
+        font-size:.95rem;
+        color:var(--muted);
+      }
+      .greeting{
+        margin:.3rem 0 0;
+        font-size:.9rem;
+        color:var(--accent);
+        font-weight:500;
+      }
+
+      .top-row{
+        display:flex;
+        align-items:flex-start;
+        justify-content:space-between;
+        gap:.5rem;
+      }
+      .links{
+        display:flex;
+        gap:.75rem;
+        margin-top:.55rem;
+        flex-wrap:wrap;
+      }
+      .pill-link{
+        position:relative;
+        border-radius:999px;
+        padding:.32rem .9rem;
+        font-size:.85rem;
+        border:1px solid rgba(148,163,184,0.6);
+        display:inline-flex;
+        align-items:center;
+        gap:.35rem;
+        text-decoration:none;
+        color:var(--fg);
+        overflow:hidden;
+        cursor:pointer;
+        transition:background .2s ease,border-color .2s ease,transform .2s ease,box-shadow .2s ease;
+        box-shadow:0 1px 3px rgba(15,23,42,0.08);
+        background:rgba(248,250,252,0.9);
+      }
+      body[data-theme="dark"] .pill-link{
+        background:rgba(15,23,42,0.9);
+      }
+      .pill-link span.icon{
+        font-size:1rem;
+      }
+      .pill-link::after{
+        content:"";
+        position:absolute;
+        inset:0;
+        background:radial-gradient(circle at 0 0,rgba(96,165,250,.6),transparent 55%);
+        opacity:0;
+        transition:opacity .25s ease;
+      }
+      .pill-link:hover{
+        background:rgba(239,246,255,1);
+        border-color:rgba(129,140,248,0.9);
+        transform:translateY(-1px);
+        box-shadow:0 6px 18px rgba(148,163,184,0.35);
+      }
+      body[data-theme="dark"] .pill-link:hover{
+        background:rgba(30,64,175,0.7);
+      }
+      .pill-link:hover::after{
+        opacity:1;
+      }
+
+      .icon-button{
+        border-radius:999px;
+        border:1px solid rgba(148,163,184,0.7);
+        padding:.35rem .6rem;
+        background:rgba(248,250,252,0.9);
+        color:var(--muted);
+        display:inline-flex;
+        align-items:center;
+        justify-content:center;
+        font-size:1rem;
+        cursor:pointer;
+        transition:background .2s ease, transform .2s ease, box-shadow .2s ease, border-color .2s ease;
+        box-shadow:0 2px 7px rgba(15,23,42,0.18);
+      }
+      body[data-theme="dark"] .icon-button{
+        background:rgba(15,23,42,0.9);
+      }
+      .icon-button:hover{
+        transform:translateY(-1px);
+        border-color:var(--accent);
+        box-shadow:0 8px 22px rgba(15,23,42,0.35);
+      }
+
+      .skills{
+        display:flex;
+        flex-wrap:wrap;
+        gap:.45rem;
+        margin-top:.6rem;
+      }
+      .skill{
+        background:var(--accent-soft);
+        padding:.25rem .65rem;
+        border-radius:999px;
+        font-size:.78rem;
+        color:var(--accent);
+        border:1px solid rgba(129,140,248,0.45);
+        letter-spacing:.02em;
+        text-transform:uppercase;
+        opacity:0;
+        transform:translateY(6px);
+        transition:transform .35s cubic-bezier(0.22,1,0.36,1),opacity .35s ease,box-shadow .2s ease;
+        box-shadow:0 4px 10px rgba(129,140,248,0.18);
+      }
+      .skill.skill-pop{
+        opacity:1;
+        transform:translateY(0);
+      }
+      .skill:hover{
+        box-shadow:0 8px 20px rgba(79,70,229,0.35);
+        transform:translateY(-1px) scale(1.03);
+      }
+
+      section{
+        margin-top:1.35rem;
+        padding-top:1rem;
+        border-top:1px dashed rgba(148,163,184,0.6);
+      }
+      section:first-of-type{
+        margin-top:1.2rem;
+      }
+      h2{
+        margin:0 0 .35rem;
+        font-size:1.05rem;
+        letter-spacing:.06em;
+        text-transform:uppercase;
+        color:var(--muted);
+      }
+      p{
+        margin:.2rem 0 .4rem;
+        font-size:.94rem;
+        line-height:1.5;
+        color:var(--fg);
+      }
+      .muted{
+        color:var(--muted);
+      }
+
+      ul{
+        margin:.2rem 0 .4rem;
+        padding-left:1.1rem;
+      }
+      li{
+        margin-bottom:.2rem;
+        font-size:.93rem;
+      }
+      strong{
+        font-weight:600;
+      }
+
+      a{
+        color:inherit;
+      }
+      a.email-link{
+        position:relative;
+        text-decoration:none;
+        padding-bottom:1px;
+      }
+      a.email-link::after{
+        content:"";
+        position:absolute;
+        left:0;
+        bottom:0;
+        width:100%;
+        height:1px;
+        background:linear-gradient(to right, var(--accent), #22c55e);
+        transform-origin:left;
+        transform:scaleX(.25);
+        opacity:.7;
+        transition:transform .23s ease, opacity .23s ease;
+      }
+      a.email-link:hover::after{
+        transform:scaleX(1);
+        opacity:1;
+      }
+
+      footer{
+        margin-top:1.65rem;
+        font-size:.82rem;
+        color:var(--muted);
+        display:flex;
+        align-items:center;
+        justify-content:space-between;
+        gap:.75rem;
+        flex-wrap:wrap;
+      }
+      .footer-heart{
+        display:inline-block;
+        animation:pulse 1.4s infinite;
+      }
+      @keyframes pulse{
+        0%,100%{transform:scale(1);}
+        50%{transform:scale(1.15);}
+      }
+
+      /* scroll reveal */
+      .fade-section{
+        opacity:0;
+        transform:translateY(14px);
+        transition:opacity .4s ease, transform .4s cubic-bezier(0.22,1,0.36,1);
+      }
+      .fade-section.visible{
+        opacity:1;
+        transform:translateY(0);
+      }
+
+      @media (max-width:640px){
+        .container{
+          padding:1.35rem 1.1rem 1.1rem;
+          border-radius:16px;
+        }
+        header{
+          flex-direction:row;
+          align-items:flex-start;
+        }
+        .avatar-wrap{
+          width:82px;
+          height:82px;
+        }
+        h1{
+          font-size:1.4rem;
+        }
+        .page-frame{
+          padding:1rem;
+        }
+      }
+    </style>
+  </head>
+  <body>
+    <div class="page-frame">
       <div class="container">
-         <header>
-            <img class="avatar" src="https://avatars.githubusercontent.com/u/9919?s=200&v=4" alt="avatar" />
-            <div>
-               <h1>Diwa Prasetyo</h1>
-               <div>Software Engineer · FAST API · Python · Cloud</div>
-               <div class="links" style="margin-top:.5rem">
-                  <a href="https://github.com/DiwaPrasetyo02" target="_blank">GitHub</a>
-                  <a href="https://www.linkedin.com/in/diwa-prasetyo" target="_blank">LinkedIn</a>
-               </div>
-               <div class="skills" aria-hidden>
-                  <span class="skill">.NET</span>
-                  <span class="skill">Golang</span>
-                  <span class="skill">Docker</span>
-                  <span class="skill">AWS</span>
-               </div>
+        <header>
+          <div class="avatar-wrap">
+            <div class="avatar-ring"></div>
+            <img
+              class="avatar"
+              src="https://avatars.githubusercontent.com/u/9919?s=200&v=4"
+              alt="avatar"
+            />
+            <div class="avatar-glow"></div>
+          </div>
+          <div style="flex:1;">
+            <div class="top-row">
+              <div>
+                <h1>Diwa Prasetyo</h1>
+                <div class="role">Software Engineer · FAST API · Python · Cloud</div>
+                <p id="greeting" class="greeting"></p>
+              </div>
+              <button id="themeToggle" class="icon-button" aria-label="Toggle dark mode">
+                🌙
+              </button>
             </div>
-         </header>
-         <section>
-            <h2>About</h2>
-            <p>Passionate software engineer building reliable backend systems. I enjoy clean architecture, distributed systems, and mentoring peers.</p>
-         </section>
-         <section>
-            <h2>Education</h2>
-            <p>Universitas Pendidikan Indonesia — S.Kom, Computer Science</p>
-         </section>
-         <section>
-            <h2>Projects</h2>
-            <ul>
-               <li><strong>Good Night Steph</strong> — Sleep tracking API (Rails, Elasticsearch)</li>
-               <li><strong>Pool Simulator</strong> — Face recognition (Dotnet, Emgu.CV)</li>
-            </ul>
-         </section>
-         <section>
-            <h2>Contact</h2>
-            <p>Email: <a href="mailto:diwapraset02@gmail.com">diwapraset02@gmail.com</a></p>
-         </section>
-         <footer>
-            Built with ♥ · Published via GitHub Pages
-         </footer>
+            <div class="links" style="margin-top:.5rem">
+              <a
+                class="pill-link"
+                href="https://github.com/DiwaPrasetyo02"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <span class="icon">🐙</span>
+                <span>GitHub</span>
+              </a>
+              <a
+                class="pill-link"
+                href="https://www.linkedin.com/in/diwa-prasetyo"
+                target="_blank"
+                rel="noreferrer"
+              >
+                <span class="icon">💼</span>
+                <span>LinkedIn</span>
+              </a>
+            </div>
+            <div class="skills" aria-hidden="true">
+              <span class="skill">.NET</span>
+              <span class="skill">Golang</span>
+              <span class="skill">Docker</span>
+              <span class="skill">AWS</span>
+            </div>
+          </div>
+        </header>
+
+        <section class="fade-section" data-animate>
+          <h2>About</h2>
+          <p>
+            Passionate software engineer building reliable backend systems. I enjoy clean
+            architecture, distributed systems, and mentoring peers.
+          </p>
+        </section>
+
+        <section class="fade-section" data-animate>
+          <h2>Education</h2>
+          <p>Universitas Pendidikan Indonesia — S.Kom, Computer Science</p>
+        </section>
+
+        <section class="fade-section" data-animate>
+          <h2>Projects</h2>
+          <ul>
+            <li>
+              <strong>Good Night Steph</strong> — Sleep tracking API
+              <span class="muted">(Rails, Elasticsearch)</span>
+            </li>
+            <li>
+              <strong>Pool Simulator</strong> — Face recognition
+              <span class="muted">(Dotnet, Emgu.CV)</span>
+            </li>
+          </ul>
+        </section>
+
+        <section class="fade-section" data-animate>
+          <h2>Contact</h2>
+          <p>
+            Email:
+            <a class="email-link" href="mailto:diwapraset02@gmail.com">
+              diwapraset02@gmail.com
+            </a>
+          </p>
+        </section>
+
+        <footer class="fade-section" data-animate>
+          <span>Built with <span class="footer-heart">♥</span> · Published via GitHub Pages</span>
+          <span class="muted" id="lastUpdated"></span>
+        </footer>
       </div>
-   </body>
+    </div>
+
+    <script>
+      document.addEventListener("DOMContentLoaded", function () {
+        const body = document.body;
+        const themeToggle = document.getElementById("themeToggle");
+        const greetingEl = document.getElementById("greeting");
+        const lastUpdatedEl = document.getElementById("lastUpdated");
+        const sections = document.querySelectorAll("[data-animate]");
+        const skills = document.querySelectorAll(".skill");
+
+        // ----- Greeting based on time -----
+        (function setGreeting() {
+          const hour = new Date().getHours();
+          let text = "Have a nice day building cool things.";
+          if (hour >= 5 && hour < 11) text = "Good morning — perfect time to ship features.";
+          else if (hour >= 11 && hour < 16) text = "Good afternoon — keep the commits flowing.";
+          else if (hour >= 16 && hour < 21) text = "Good evening — great time to refactor cleanly.";
+          else text = "Burning the midnight oil — don’t forget to rest.";
+          greetingEl.textContent = text;
+        })();
+
+        // ----- Theme toggle (light / dark) -----
+        (function initTheme() {
+          const stored = window.localStorage.getItem("theme");
+          if (stored === "dark") {
+            body.setAttribute("data-theme", "dark");
+          }
+          updateThemeIcon();
+
+          themeToggle.addEventListener("click", function () {
+            const isDark = body.getAttribute("data-theme") === "dark";
+            if (isDark) {
+              body.removeAttribute("data-theme");
+              window.localStorage.setItem("theme", "light");
+            } else {
+              body.setAttribute("data-theme", "dark");
+              window.localStorage.setItem("theme", "dark");
+            }
+            updateThemeIcon();
+          });
+
+          function updateThemeIcon() {
+            const isDark = body.getAttribute("data-theme") === "dark";
+            themeToggle.textContent = isDark ? "☀️" : "🌙";
+          }
+        })();
+
+        // ----- Reveal sections on scroll -----
+        if ("IntersectionObserver" in window) {
+          const observer = new IntersectionObserver(
+            (entries) => {
+              entries.forEach((entry) => {
+                if (entry.isIntersecting) {
+                  entry.target.classList.add("visible");
+                  observer.unobserve(entry.target);
+                }
+              });
+            },
+            { rootMargin: "0px 0px -15% 0px", threshold: 0.15 }
+          );
+          sections.forEach((section) => observer.observe(section));
+        } else {
+          // fallback if IntersectionObserver not available
+          sections.forEach((section) => section.classList.add("visible"));
+        }
+
+        // ----- Staggered skills animation -----
+        skills.forEach((chip, index) => {
+          const delay = 100 + index * 80; // ms
+          setTimeout(() => {
+            chip.classList.add("skill-pop");
+          }, delay);
+        });
+
+        // ----- Last updated footer text -----
+        (function setLastUpdated() {
+          if (!lastUpdatedEl) return;
+          const updated = document.lastModified;
+          if (!updated) return;
+          const date = new Date(updated);
+          if (isNaN(date.getTime())) return;
+          const options = { year: "numeric", month: "short", day: "numeric" };
+          lastUpdatedEl.textContent = "Last updated · " + date.toLocaleDateString(undefined, options);
+        })();
+      });
+    </script>
+  </body>
 </html>
